Fix collapse component's heading line-height

--- a/src/css/magicssian_draft.css
+++ b/src/css/magicssian_draft.css
@@ -1127,7 +1127,7 @@ body.sticky-footer footer {
   position: relative;
   margin: 0;
   padding: calc(.5 * var(--rhytm-unit));
-  line-height: calc(2 * var(--rhytm-unit) - 2px);
+  line-height: calc(2 * var(--rhytm-unit));
 }
 .collapse .heading:after {
   position: absolute;
